# root

./: update_cppyy.sh
CppyyPatches/: signaltrycatch.diff  string_view_backport.patch  tstring_converter.patch
README/ReleaseNotes/v620/: index.md
bindings/: CMakeLists.txt
bindings/jsmva/: CMakeLists.txt
bindings/jupyroot/: CMakeLists.txt
bindings/pyroot/cppyy/cppyy/: CMakeLists.txt
bindings/pyroot/cppyy/cppyy-backend/: CMakeLists.txt
bindings/pyroot/pythonizations/: CMakeLists.txt
bindings/pyroot_experimental/: CMakeLists.txt
bindings/pyroot_experimental/PyROOT/: CMakeLists.txt  setup.py
bindings/pyroot_experimental/PyROOT/JsMVA/: CMakeLists.txt  setup.py.in
bindings/pyroot_experimental/PyROOT/JupyROOT/: CMakeLists.txt  setup.py.in
bindings/pyroot_experimental/PyROOT/ROOT/: CMakeLists.txt  setup.py.in
bindings/pyroot_experimental/PyROOT/python/ROOT/: __init__.py  _deprecated_methods.py
bindings/pyroot_experimental/PyROOT/src/: CppCallablePyz.cxx  PyROOTModule.cxx  PyzCppHelpers.cxx  TTreePyz.cxx
bindings/pyroot_experimental/cppyy/CPyCppyy/: CMakeLists.txt  setup.py  setup.py.in
bindings/pyroot_experimental/cppyy/CPyCppyy/src/: Converters.cxx  DeclareConverters.h
bindings/pyroot_experimental/cppyy/cppyy/: CMakeLists.txt  setup.py.in
bindings/pyroot_experimental/cppyy/cppyy-backend/: CMakeLists.txt  setup.py  setup.py.in
bindings/pyroot_experimental/cppyy/patches/: multi_python_cppyy.patch
bindings/pyroot_experimental/pythonizations/: CMakeLists.txt
bindings/tpython/: CMakeLists.txt
cmake/modules/: RootBuildOptions.cmake  RootInstallDirs.cmake  RootMacros.cmake  SearchInstalledSoftware.cmake  SearchRootCoreDeps.cmake
config/: thisroot.sh
core/unix/src/: TUnixSystem.cxx
tutorials/: CMakeLists.txt
